--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diagnostik Dermatopatoloji Derneği</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav id = "navbar" class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a id="name" class="navbar-brand" href="index.html">Diagnostik Dermatopatoloji Derneği</a>
-        </div>
-        <ul id="links" class="nav navbar-nav">
-            <li><a href="about.html">Hakkımızda</a></li>
-            <li><a href="laws.html">Tüzük</a></li>
-            <li><a href="membership.html">Üyelik</a></li>
-            <li><a href="dictionary.html">Terimler Sözlüğü</a></li>
-            <li><a href="book.html">Kitabımız</a></li>
-            <li><a href="other.html">Diğer</a></li>
-        </ul>
+    <nav>
+    <div class="nav-wrapper">
+      <img src="ddd.png">
+      <ul class="right hide-on-med-and-down">
+        <li><a href="about.html">Hakkımızda</a></li>
+        <li><a href="laws.html">Tüzük</a></li>
+        <li><a href="dictionary.html">Terimler Sözlüğü</a></li>
+        <li><a href="book.html">Kitabımız</a></li>
+        <li><a id="mem" class="waves-effect waves-light btn" href="membership.html">Üyelik</a></li>
+      </ul>
     </div>
-    </nav>
+  </nav>
+  <div class="parallax-intro">
+    <h3>Diagnostik Dermatopatoloji Derneği</h3>
+    <p>Slogan here</p>
+  </div>
+    
 
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
